镜像改为国内阿里云

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,8 +27,8 @@ jobs:
           buildkitd-flags: --debug
       - uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          registry: registry.cn-shanghai.aliyuncs.com
+          username: ${{ secrets.REPOSITORY_OWNER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/build-push-action@v3
         with:
@@ -37,4 +37,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/parkervcp/yolks:go_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/vlssu/yolks:go_${{ matrix.tag }}
