--- a/games/mohaa/Dockerfile
+++ b/games/mohaa/Dockerfile
@@ -1,4 +1,4 @@
-FROM        ghcr.io/parkervcp/yolks:debian
+FROM        registry.cn-shanghai.aliyuncs.com/vlssu/yolks:debian
 
 LABEL       author="Manuel Dielacher" maintainer="th3dilli@gmx.at"
 
