--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -29,8 +29,8 @@ jobs:
           buildkitd-flags: --debug
       - uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          registry: registry.cn-shanghai.aliyuncs.com
+          username: ${{ secrets.REPOSITORY_OWNER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/build-push-action@v3
         with:
@@ -39,4 +39,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/parkervcp/yolks:mongodb_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/vlssu/yolks:mongodb_${{ matrix.tag }}
