--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -25,8 +25,8 @@ jobs:
           buildkitd-flags: --debug
       - uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          registry: registry.cn-shanghai.aliyuncs.com
+          username: ${{ secrets.REPOSITORY_OWNER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/build-push-action@v3
         with:
@@ -35,4 +35,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/parkervcp/yolks:mono_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/vlssu/yolks:mono_${{ matrix.tag }}
