--- a/.github/workflows/cassandra.yml
+++ b/.github/workflows/cassandra.yml
@@ -36,4 +36,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            registry.cn-shanghai.aliyuncs.com/vlssu/yolks:cassandra_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:cassandra_${{ matrix.tag }}
