--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -42,4 +42,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            registry.cn-shanghai.aliyuncs.com/vlssu/yolks:postgres_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:postgres_${{ matrix.tag }}
