--- a/.github/workflows/games.yml
+++ b/.github/workflows/games.yml
@@ -41,4 +41,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            registry.cn-shanghai.aliyuncs.com/vlssu/games:${{ matrix.game }}
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/games:${{ matrix.game }}
