--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -39,4 +39,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            registry.cn-shanghai.aliyuncs.com/vlssu/yolks:mongodb_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:mongodb_${{ matrix.tag }}
