--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -35,4 +35,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            registry.cn-shanghai.aliyuncs.com/vlssu/yolks:mono_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:mono_${{ matrix.tag }}
