--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,4 +40,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            registry.cn-shanghai.aliyuncs.com/vlssu/yolks:rust_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:rust_${{ matrix.tag }}
