--- a/.github/workflows/voice.yml
+++ b/.github/workflows/voice.yml
@@ -35,4 +35,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-             registry.cn-shanghai.aliyuncs.com/vlssu/yolks:voice_${{ matrix.tag }}
+             registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:voice_${{ matrix.tag }}
