--- a/.github/workflows/mcdr.yml
+++ b/.github/workflows/mcdr.yml
@@ -9,8 +9,8 @@ on:
     paths:
       - mcdr/**
 jobs:
-  push:
-    name: "games:mcdr_java_${{ matrix.tag }}"
+  pushMultiArch:
+    name: "games:mcdr_java_${{ matrix.tag }}_multiarch"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -18,15 +18,43 @@ jobs:
         tag:
           - '8'
           - '11'
-          - '16'
           - '17'
     steps:
       - uses: actions/checkout@v3
-      # Setup QEMU for ARM64 Build
-      - uses: docker/setup-qemu-action@v2          
       - uses: docker/setup-buildx-action@v2
         with:
-          version: "v0.8.2"
+          buildkitd-flags: --debug
+      - name: Setup QEMU for multiarch builds
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm64,amd64
+      - uses: docker/login-action@v2
+        with:
+          registry: registry.cn-shanghai.aliyuncs.com
+          username: ${{ secrets.REPOSITORY_OWNER }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+      - uses: docker/build-push-action@v3
+        with:
+          context: ./mcdr
+          file: ./mcdr/${{ matrix.tag }}/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/games:mcdr_java_${{ matrix.tag }}
+  pushAmd:
+    name: "games:mcdr_java_${{ matrix.tag }}_amd"
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        tag:
+          - '16'
+    steps:
+      - uses: actions/checkout@v2
+      # Setup QEMU for ARM64 Build
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
+        with:
           buildkitd-flags: --debug
       - uses: docker/login-action@v2
         with:
