--- a/.github/workflows/mcdr.yml
+++ b/.github/workflows/mcdr.yml
@@ -9,25 +9,24 @@ on:
     paths:
       - mcdr/**
 jobs:
-  pushMultiArch:
-    name: "games:mcdr_java_${{ matrix.tag }}_multiarch"
+  push:
+    name: "games:mcdr_java_${{ matrix.tag }}"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         tag:
-          - '8'
-          - '11'
-          - '17'
+          - 8
+          - 11
+          - 16
+          - 17
+          - 19
     steps:
       - uses: actions/checkout@v3
+      - uses: docker/setup-qemu-action@v2
       - uses: docker/setup-buildx-action@v2
         with:
           buildkitd-flags: --debug
-      - name: Setup QEMU for multiarch builds
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: arm64,amd64
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -38,32 +37,6 @@ jobs:
           context: ./mcdr
           file: ./mcdr/${{ matrix.tag }}/Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            ghcr.io/parkervcp/games:mcdr_java_${{ matrix.tag }}
-  pushAmd:
-    name: "games:mcdr_java_${{ matrix.tag }}_amd"
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        tag:
-          - '16'
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-buildx-action@v2
-        with:
-          buildkitd-flags: --debug
-      - uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
-      - uses: docker/build-push-action@v3
-        with:
-          context: ./mcdr
-          file: ./mcdr/${{ matrix.tag }}/Dockerfile
-          platforms: linux/amd64
           push: true
           tags: |
             ghcr.io/parkervcp/games:mcdr_java_${{ matrix.tag }}
