--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,8 @@ jobs:
           - 7
     steps:
       - uses: actions/checkout@v3
+            # Setup QEMU for ARM64 Build
+      - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v2
         with:
           buildkitd-flags: --debug
@@ -31,11 +33,11 @@ jobs:
           registry: registry.cn-shanghai.aliyuncs.com
           username: ${{ secrets.REPOSITORY_OWNER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-      - uses: docker/build-push-action@v3
+      - uses: docker/build-push-action@v4
         with:
           context: ./dotnet
           file: ./dotnet/${{ matrix.tag }}/Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:dotnet_${{ matrix.tag }}
