--- a/installers/debian/Dockerfile
+++ b/installers/debian/Dockerfile
@@ -33,3 +33,7 @@ RUN         dpkg --add-architecture i386 \
 				&& apt update \
 				&& apt upgrade -y \
 				&& apt -y --no-install-recommends install ca-certificates curl lib32gcc-s1 libsdl2-2.0-0:i386 git unzip zip tar jq wget
+
+RUN         apt-get install -y locales
+RUN         localedef -c -f UTF-8 -i zh_CN zh_CN.utf8
+ENV         LANG zh_CN.utf8
