更新缺少语言

--- a/steamcmd/debian/Dockerfile
+++ b/steamcmd/debian/Dockerfile
@@ -19,9 +19,11 @@ RUN         cd /tmp/ \
             && tar xvf rcon.tar.gz \
             && mv rcon-0.10.2-amd64_linux/rcon /usr/local/bin/
 
-RUN         apt-get install -y locales
-RUN         localedef -c -f UTF-8 -i zh_CN zh_CN.utf8
-ENV         LANG zh_CN.utf8
+RUN 		apt-get install -y locales
+RUN 		sed -i -e 's/# zh_CN.UTF-8 UTF-8/zh_CN.UTF-8 UTF-8/' /etc/locale.gen && sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
+ENV 		LANG en_US.UTF-8
+ENV 		LANGUAGE en_US:zh_CN
+ENV 		LC_ALL en_US.UTF-8
 
 USER        container
 ENV         USER=container HOME=/home/container
