--- a/.github/workflows/games.yml
+++ b/.github/workflows/games.yml
@@ -23,7 +23,8 @@ jobs:
           - samp
           - source
           - valheim
-          
+          - dontstarve
+
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
