--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -39,4 +39,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/parkervcp/yolks:elixir_${{ matrix.tag }}
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:elixir_${{ matrix.tag }}
