--- a/.github/workflows/apps.yml
+++ b/.github/workflows/apps.yml
@@ -19,19 +19,19 @@ jobs:
           - uptimekuma
     steps:
       - uses: actions/checkout@v3
-      
+
       - uses: docker/setup-qemu-action@v3
-      
+
       - uses: docker/setup-buildx-action@v3
         with:
           buildkitd-flags: --debug
-      
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-      
+
       - uses: docker/build-push-action@v5
         with:
           context: ./apps/${{ matrix.app }}
@@ -39,4 +39,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/parkervcp/apps:${{ matrix.app }}
+            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/apps:${{ matrix.app }}
