--- a/wine/devel/Dockerfile
+++ b/wine/devel/Dockerfile
@@ -1,7 +1,7 @@
 # ---------------------------------------
-# Generic Wine image based on Wine devel 
+# Generic Wine image based on Wine devel
 # ---------------------------------------
-FROM            ghcr.io/parkervcp/yolks:debian
+FROM            registry.cn-shanghai.aliyuncs.com/pterodactyl-images/yolks:debian
 
 LABEL           author="Michael Parker" maintainer="parker@pterodactyl.io"
 LABEL           org.opencontainers.image.licenses=MIT
