--- a/.github/workflows/apps.yml
+++ b/.github/workflows/apps.yml
@@ -28,8 +28,8 @@ jobs:
 
       - uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          registry: registry.cn-shanghai.aliyuncs.com
+          username: ${{ secrets.REPOSITORY_OWNER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
 
       - uses: docker/build-push-action@v5
