--- a/java/21/Dockerfile
+++ b/java/21/Dockerfile
@@ -22,6 +22,9 @@ RUN         apt update -y \
 				zip \
 				unzip
 
+RUN 		apt-get install -y locales \
+			&& locale-gen zh_CN.UTF-8
+
 ## Setup user and working directory
 RUN         useradd -m -d /home/container -s /bin/bash container
 USER        container
