--- a/java/8/Dockerfile
+++ b/java/8/Dockerfile
@@ -1,4 +1,4 @@
-FROM        --platform=$TARGETOS/$TARGETARCH eclipse-temurin:8u312-b07-jdk-focal
+FROM        --platform=$TARGETOS/$TARGETARCH eclipse-temurin:8-jdk-noble
 
 LABEL       author="Michael Parker" maintainer="parker@pterodactyl.io"
 
@@ -20,10 +20,8 @@ RUN         apt update -y \
                 libfreetype6 \
                 tini \
 				zip \
-				unzip
-
-RUN 		apt-get install -y locales \
-			&& locale-gen zh_CN.UTF-8
+				unzip \
+                jq
 
 ## Setup user and working directory
 RUN         useradd -m -d /home/container -s /bin/bash container
