--- a/java/16j9/Dockerfile
+++ b/java/16j9/Dockerfile
@@ -17,8 +17,8 @@ RUN         apt update -y \
                 libfreetype6 \
                 tini \
 				zip \
-				unzip
-
+				unzip \
+                jq
 RUN 		apt-get install -y locales \
 			&& locale-gen zh_CN.UTF-8
 
