--- a/mariadb/11.4/Dockerfile
+++ b/mariadb/11.4/Dockerfile
@@ -5,10 +5,10 @@ FROM        --platform=$TARGETOS/$TARGETARCH mariadb:11.4
 
 LABEL       author="Michael Parker" maintainer="parker@pterodactyl.io"
 
-ENV         DEBIAN_FRONTEND noninteractive
+ENV         DEBIAN_FRONTEND=noninteractive
 
 RUN         apt update -y \
-            && apt install -y netcat \
+            && apt install -y netcat-traditional \
             && useradd -d /home/container -m container -s /bin/bash
 
 USER        container
