--- a/nodejs/19/Dockerfile
+++ b/nodejs/19/Dockerfile
@@ -2,19 +2,43 @@ FROM        --platform=$TARGETOS/$TARGETARCH node:19-bullseye-slim
 
 LABEL       author="Michael Parker" maintainer="parker@pterodactyl.io"
 
-RUN         apt update \
-            && apt -y install ffmpeg iproute2 git sqlite3 libsqlite3-dev python3 python3-dev ca-certificates dnsutils tzdata zip tar curl build-essential libtool iputils-ping libnss3 tini \
-            && useradd -m -d /home/container container
+# add container user and set stop signal
+RUN         useradd -m -d /home/container container
+STOPSIGNAL  SIGINT
 
-RUN         npm install npm@9.8.1 typescript ts-node @types/node --location=global
+RUN         apt update \
+            && apt -y install \
+                ffmpeg \
+                iproute2 \
+                git \
+                sqlite3 \
+                libsqlite3-dev \
+                python3 \
+                python3-dev \
+                ca-certificates \
+                dnsutils \
+                tzdata \
+                zip \
+                tar \
+                curl \
+                build-essential \
+                libtool \
+                iputils-ping \
+                libnss3 \
+                tini
+
+RUN         npm install --global npm@9.x.x typescript ts-node @types/node
+
+# install pnpm
+RUN         npm install -g corepack
+RUN         corepack enable
+RUN         corepack prepare pnpm@latest --activate
 
 USER        container
 ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
 
-STOPSIGNAL SIGINT
-
 COPY        --chown=container:container ./../entrypoint.sh /entrypoint.sh
 RUN         chmod +x /entrypoint.sh
-ENTRYPOINT    ["/usr/bin/tini", "-g", "--"]
+ENTRYPOINT  ["/usr/bin/tini", "-g", "--"]
 CMD         ["/entrypoint.sh"]
