--- a/steamcmd/debian/Dockerfile
+++ b/steamcmd/debian/Dockerfile
@@ -8,16 +8,46 @@ LABEL       org.opencontainers.image.licenses=MIT
 ENV         DEBIAN_FRONTEND=noninteractive
 
 RUN         dpkg --add-architecture i386 \
-            && apt-get update \
-            && apt-get upgrade -y \
-            && apt-get install -y tar curl gcc g++ lib32gcc-s1 libgcc-12-dev libgcc-11-dev libcurl4-gnutls-dev:i386 libssl-dev:i386 libcurl4:i386 lib32tinfo6 libtinfo6:i386 lib32z1 lib32stdc++6 libncurses5:i386 libcurl3-gnutls:i386 libsdl2-2.0-0:i386 libsdl2-2.0-0 iproute2 gdb libsdl1.2debian libfontconfig1 telnet net-tools netcat-traditional tzdata numactl xvfb wget tini \
-            && useradd -m -d /home/container container
+            && apt update \
+            && apt upgrade -y \
+            && apt install -y \
+                curl \
+                g++ \
+                gcc \
+                gdb \
+                iproute2 \
+                locales \
+                net-tools \
+                netcat-traditional \
+                tar \
+                telnet \
+                tini \
+                tzdata \
+                wget \
+                xvfb \
+                lib32gcc-s1 \
+                lib32stdc++6 \
+                lib32tinfo6 \
+                lib32z1 \
+                libcurl3-gnutls:i386 \
+                libcurl4-gnutls-dev:i386 \
+                libcurl4:i386 \
+                libfontconfig1 \
+                libgcc-11-dev \
+                libgcc-12-dev \
+                libncurses5:i386 \
+                libsdl1.2debian \
+                libsdl2-2.0-0 \
+                libsdl2-2.0-0:i386 \
+                libssl-dev:i386 \
+                libtinfo6:i386
 
-## install rcon
+# Install rcon
 RUN         cd /tmp/ \
             && curl -sSL https://github.com/gorcon/rcon-cli/releases/download/v0.10.3/rcon-0.10.3-amd64_linux.tar.gz > rcon.tar.gz \
             && tar xvf rcon.tar.gz \
             && mv rcon-0.10.3-amd64_linux/rcon /usr/local/bin/
+
 
             # Temp fix for things that still need libssl1.1
 RUN         if [ "$(uname -m)" = "x86_64" ]; then \
@@ -26,19 +56,22 @@ RUN         if [ "$(uname -m)" = "x86_64" ]; then \
                 rm libssl1.1_1.1.0g-2ubuntu4_amd64.deb; \
             fi
 
+# Set the locale
 RUN 		apt-get install -y locales
 RUN 		sed -i -e 's/# zh_CN.UTF-8 UTF-8/zh_CN.UTF-8 UTF-8/' /etc/locale.gen && sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
 ENV 		LANG en_US.UTF-8
 ENV 		LANGUAGE en_US:zh_CN
 ENV 		LC_ALL en_US.UTF-8
 
+# Setup user and working directory
+RUN         useradd -m -d /home/container -s /bin/bash container
 USER        container
 ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
 
-STOPSIGNAL SIGINT
+STOPSIGNAL  SIGINT
 
 COPY        --chown=container:container ../entrypoint.sh /entrypoint.sh
 RUN         chmod +x /entrypoint.sh
-ENTRYPOINT    ["/usr/bin/tini", "-g", "--"]
+ENTRYPOINT  ["/usr/bin/tini", "-g", "--"]
 CMD         ["/entrypoint.sh"]
