--- a/steamcmd/sniper/Dockerfile
+++ b/steamcmd/sniper/Dockerfile
@@ -6,30 +6,58 @@ FROM         --platform=$TARGETOS/$TARGETARCH registry.gitlab.steamos.cloud/stea
 LABEL       author="Alexander Ballauf" maintainer="admin@ballaual.de"
 LABEL       org.opencontainers.image.description SteamRT3 Platform image for Pterodactyl Source engine servers.
 
-## install required packages
+# Install required packages
 RUN         dpkg --add-architecture i386 \
-            && apt-get update \
-            && apt-get upgrade -y \
-            && apt-get install -y tar curl gcc g++ lib32gcc-s1 libgcc1 libcurl4-gnutls-dev:i386 libssl1.1:i386 libcurl4:i386 lib32tinfo6 libtinfo6:i386 lib32z1 lib32stdc++6 libncurses5:i386 libcurl3-gnutls:i386 libsdl2-2.0-0:i386 libsdl2-2.0-0 iproute2 gdb libsdl1.2debian libfontconfig1 telnet net-tools netcat tzdata numactl xvfb tini libc6 \
-            && useradd -m -d /home/container container
+            && apt update \
+            && apt upgrade -y \
+            && apt install -y \
+                tar \
+                curl \
+                gcc \
+                g++ \
+                lib32gcc-s1 \
+                libgcc1 \
+                libcurl4-gnutls-dev:i386 \
+                libssl1.1:i386 \
+                libcurl4:i386 \
+                lib32tinfo6 \
+                libtinfo6:i386 \
+                lib32z1 \
+                lib32stdc++6 \
+                libncurses5:i386 \
+                libcurl3-gnutls:i386 \
+                libsdl2-2.0-0:i386 \
+                libsdl2-2.0-0 \
+                iproute2 \
+                gdb \
+                libsdl1.2debian \
+                libfontconfig1 \
+                telnet \
+                net-tools \
+                netcat \
+                tzdata \
+                xvfb \
+                tini \
+                libc6
 
-## install rcon
+# Install rcon
 RUN         cd /tmp/ \
             && curl -sSL https://github.com/gorcon/rcon-cli/releases/download/v0.10.3/rcon-0.10.3-amd64_linux.tar.gz > rcon.tar.gz \
             && tar xvf rcon.tar.gz \
             && mv rcon-0.10.3-amd64_linux/rcon /usr/local/bin/
 
+# Setup user and working directory
 RUN 		apt-get install -y locales
 RUN 		sed -i -e 's/# zh_CN.UTF-8 UTF-8/zh_CN.UTF-8 UTF-8/' /etc/locale.gen && sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
 ENV 		LANG en_US.UTF-8
 ENV 		LANGUAGE en_US:zh_CN
 ENV 		LC_ALL en_US.UTF-8
-
+RUN         useradd -m -d /home/container -s /bin/bash container
 USER        container
 ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
 
-STOPSIGNAL SIGINT
+STOPSIGNAL  SIGINT
 
 COPY        --chown=container:container ./../entrypoint.sh /entrypoint.sh
 RUN         chmod +x /entrypoint.sh
