--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -29,8 +29,8 @@ jobs:
           buildkitd-flags: --debug
       - uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          registry: registry.cn-shanghai.aliyuncs.com
+          username: ${{ secrets.REPOSITORY_OWNER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/build-push-action@v5
         with:
